Added Ontology learning/Process and architecture.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -402,3 +402,20 @@ title={Wikidata: Create a new item},
 howpublished={https://www.wikidata.org/wiki/Special:NewItem},
 note={Accessed: 2017-02-05}
 }
+@misc{WikidataGame,
+title={Wikidata Game},
+howpublished={https://tools.wmflabs.org/wikidata-game/},
+note={Accessed: 2017-02-12},
+author={Manske, Magnus},
+year={2014}
+}
+% Taxonomy browser
+@phdthesis{Stratan2016,
+author = {Stratan, Serghei},
+number = {March},
+school = {Technische Universit{\"{a}}t Dresden},
+title = {{Software Implementation for Taxonomy Browsing and Ontology Evaluation for the case of Wikidata}},
+type = {Master thesis},
+year = {2016}
+}
+
