Added text to multiple sections. Started writing Algorithm. Added to Ontology learning/Related work. Sectionized taxonomy analyzes. Started Neural networks.

--- a/thesis/appendix_graphs.ltx
+++ b/thesis/appendix_graphs.ltx
@@ -25,6 +25,7 @@ Let $G=(V, E)$ be a directed graph. Vertices $u,v \in V$ are \textnormal{connect
 \begin{definition}[Connected (Directed graph)]
 Let $G$ be a directed graph. $G$ is \textnormal{connected}, if every pair of vertices in $G$ are connected.
 \end{definition}
+\textbf{TODO: the current definition of component is useless.}
 \begin{definition}[Component]
 Let $G$ and $H$ be directed graphs. $H$ is a \textnormal{component} of $G$, if $H$ is a connected subgraph of $G$ and $H$ is not subgraph of another connected subgraph of $G$,
 which has more vertices or edges than $H$.
@@ -34,4 +35,9 @@ A walk $W=(v_1,\ldots, v_n)$ of length $n$ is called a \textnormal{cycle}, if $v
 \end{definition}
 \begin{definition}[Directed acyclic graph]\label{acyclic directed graph}
 A directed graph $G$ is called \textnormal{directed acyclic graph}, if there are no cycles in $G$.
+\end{definition}
+\textbf{TODO: definitions}
+\begin{definition}[Weighted graph]
+\end{definition}
+\begin{definition}[Graph walk]
 \end{definition}
