--- a/thesis/preamble.sty
+++ b/thesis/preamble.sty
@@ -15,9 +15,9 @@
 \usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
 \usepackage{subfig} % make it possible to include more than one captioned figure/table in a single float
 \usepackage{color}%colors
-\usepackage{ulem}
-\usepackage{hyperref}
 \usepackage[numbers]{natbib} % for citeauthor
+\usepackage[normalem]{ulem}
+\usepackage{hyperref}
 \usepackage[yyyymmdd]{datetime} % for writing dates
 
 % fullcite/1: cite both author and numeric code of reference
