--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -12,7 +12,7 @@
 \firstreviewer{Prof. Dr. Steffen Staab}
 \firstreviewerinfo{Institute for Web Science and Technologies}
 
-\secondreviewer{Max Mustermann}
+\secondreviewer{Dr. Mahdi Bohlouli}
 \secondreviewerinfo{Institute for Web Science and Technologies}
 
 
@@ -40,41 +40,17 @@
 \section{Foundations}\label{section:foundations}
 \import{./}{foundations.ltx}
 
-\section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
-\import{./}{taxonomy_analysis.ltx}
+\section{Neural networks}\label{section:neural networks}
+\import{./}{neural_networks.ltx}
 
 \section{Ontology learning}\label{section:ontology learning}
 \import{./}{ontology_learning.ltx}
 
-\section{Neural networks}\label{section:neural networks}
-Notion of neural networks will be introduced.
+\section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
+\import{./}{taxonomy_analysis.ltx}
 
-\subsection{Recursive neural networks for graph representation}
-\fullcite{Scarselli2009}
-\subsection{Deep neural networks for graph representation}
-\fullcite{Cao2016} \\
-\fullcite{Raghu2016}
-\subsection{Continuous Bag-of-Words}
-\fullcite{Mikolov2013}
-\subsection{Skip-gram with negative sampling}
-\fullcite{Mikolov2013}\\
-\fullcite{Levy2015}\\
-\fullcite{Goldberg14}\\
-graph representations are not really relevant as there is only one big component
-and the input classes are not part of that component.
-
-\subsection{Comparison}
-
-\section{Algorithm}\label{section:algorithm}
-
-\subsection{Baseline}
-\begin{itemize}
-\item Hyper parameters
-\item Training data
-\end{itemize}
-
-\subsection{Supplementing with other resources}
-e.g. Wikipedia
+\section{Combined algorithm}\label{section:algorithm}
+\import{./}{algorithm.ltx}
 
 \section{Evaluation}\label{section:evaluation}
 
