--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -50,6 +50,29 @@
   title = {A Closer Look at Skip-gram Modelling},
   year = 2006
 }
+% rdf2vec
+@Inbook{Ristoski2016,
+author="Ristoski, Petar
+and Paulheim, Heiko",
+editor="Groth, Paul
+and Simperl, Elena
+and Gray, Alasdair
+and Sabou, Marta
+and Kr{\"o}tzsch, Markus
+and Lecue, Freddy
+and Fl{\"o}ck, Fabian
+and Gil, Yolanda",
+title="RDF2Vec: RDF Graph Embeddings for Data Mining",
+bookTitle="The Semantic Web -- ISWC 2016: 15th International Semantic Web Conference, Kobe, Japan, October 17--21, 2016, Proceedings, Part I",
+year="2016",
+publisher="Springer International Publishing",
+address="Cham",
+pages="498--514",
+isbn="978-3-319-46523-4",
+doi="10.1007/978-3-319-46523-4_30",
+url="http://dx.doi.org/10.1007/978-3-319-46523-4_30"
+}
+
 % deep neural network for graph representation
 @inproceedings{Cao2016,
   added-at = {2016-04-21T00:00:00.000+0200},
@@ -68,7 +91,7 @@
   url = {http://dblp.uni-trier.de/db/conf/aaai/aaai2016.html\#CaoLX16},
   year = 2016
 }
-% deep neural networks
+% expressivity of deep neural networks
 @ARTICLE{Raghu2016,
    author = {{Raghu}, M. and {Poole}, B. and {Kleinberg}, J. and {Ganguli}, S. and 
 	{Sohl-Dickstein}, J.},
@@ -83,7 +106,7 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160605336R},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-% recursive neural network
+% recursive neural network TODO: probably not needed
 @article{Scarselli2009,
 author = {Scarselli, F. and Gori, M. and {Ah Chung Tsoi} and Hagenbuchner, M. and Monfardini, G.},
 doi = {10.1109/TNN.2008.2005605},
@@ -203,7 +226,7 @@ school = {Telecom ParisTech},
 title = {{Rule Mining in Knowledge Bases}},
 year = {2016}
 }
-% 
+%  
 @article{Cimiano2005,
 abstract = {We present a novel approach to the automatic acquisition of taxonomies or concept hierarchies from a text corpus. The approach is based on Formal Concept Analysis (FCA), a method mainly used for the analysis of data, i.e. for investigating and processing explicitly given information. We follow Harris' distributional hypothesis and model the context of a certain term as a vector repre-senting syntactic dependencies which are automatically acquired from the text corpus with a lin-guistic parser. On the basis of this context information, FCA produces a lattice that we convert into a special kind of partial order constituting a concept hierarchy. The approach is evaluated by com-paring the resulting concept hierarchies with hand-crafted taxonomies for two domains: tourism and finance. We also directly compare our approach with hierarchical agglomerative clustering as well as with Bi-Section-KMeans as an instance of a divisive clustering algorithm. Furthermore, we investigate the impact of using different measures weighting the contribution of each attribute as well as of applying a particular smoothing technique to cope with data sparseness.},
 archivePrefix = {arXiv},
@@ -274,6 +297,19 @@ journal = {Acl},
 pages = {1199--1209},
 pmid = {1626155},
 title = {{Learning Semantic Hierarchies via Word Embeddings}},
+year = {2014}
+}
+% wikidata mapping to rdf
+@inproceedings{Erxleben2014,
+abstract = {Wikidata is the central data management platform of Wikipedia. By the efforts of thousands of volunteers, the project has produced a large, open knowledge base with many interesting applications. The data is highly interlinked and connected to many other datasets, but it is also very rich, complex, and not available in RDF. To address this issue, we introduce new RDF exports that connect Wikidata to the Linked Data Web. We explain the data model of Wikidata and discuss its encoding in RDF. Moreover, we introduce several partial exports that provide more selective or simplified views on the data. This includes a class hierarchy and several other types of ontological axioms that we extract from the site. All datasets we discuss here are freely available online and updated regularly.},
+author = {Erxleben, Fredo and G{\"{u}}nther, Michael and Kr{\"{o}}tzsch, Markus and Mendez, Julian and Vrande{\v{c}}i{\'{c}}, Denny},
+booktitle = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+doi = {10.1007/978-3-319-11964-9},
+isbn = {9783319119632},
+issn = {16113349},
+pages = {50--65},
+title = {{Introducing wikidata to the linked data web}},
+volume = {8796},
 year = {2014}
 }
 
@@ -380,13 +416,13 @@ year = {2014}
 }
 % wikidata subclass of documentation
 @misc{WikidataP279,
-title={Property talk:P279},
+title={Property talk: P279},
 howpublished={https://www.wikidata.org/wiki/Property\_talk:P279},
 note={Accessed: 2017-01-29}
 }
 % wikidata entity talk
 @misc{WikidataQ35120,
-title={Talk:Q35120},
+title={Talk: Q35120},
 howpublished={https://www.wikidata.org/wiki/Talk:Q35120},
 note={Accessed: 2017-01-29}
 }
@@ -414,7 +450,7 @@ year={2014}
 author = {Stratan, Serghei},
 number = {March},
 school = {Technische Universit{\"{a}}t Dresden},
-title = {{Software Implementation for Taxonomy Browsing and Ontology Evaluation for the case of Wikidata}},
+title = {Software Implementation for Taxonomy Browsing and Ontology Evaluation for the case of Wikidata},
 type = {Master thesis},
 year = {2016}
 }
