--- a/thesis/neural_networks.ltx
+++ b/thesis/neural_networks.ltx
@@ -1,9 +1,9 @@
 Word embeddings are vector representations of words.
 
-\subsection{Introduction to neural networks}
+\subsubsection{Introduction to neural networks}
 Notion of neural networks will be introduced.
 
-\subsection{Word2Vec}\label{section:word2vec}
+\subsubsection{Word2Vec}\label{section:word2vec}
 \fullcite{Mikolov2013}\\
 \fullcite{Levy2015}\\
 \fullcite{Goldberg14}\\
@@ -34,7 +34,7 @@ The skip-gram model solves the opposite task to CBOW.
 The target word is now the input and the model is trained to predict its context.
 
 
-\subsection{RDF2Vec}\label{section:rdf2vec}
+\subsubsection{RDF2Vec}\label{section:rdf2vec}
 combination of Word2Vec and graph walking, which can be found in dnn for gr\\
 \fullcite{Ristoski2016} propose two approaches to create embeddings for entities in RDF graphs,
 graph walks and Weisfeiler-Lehman subtree RDF graph kernels.
@@ -48,7 +48,7 @@ $v_i, v_j \in V$ and $e_{ij} \in E$. \textbf{TODO: finish this explanation}
 
 \textbf{it will be fun to explain the second approach}
 
-\subsection{Deep neural networks for graph representation}
+\subsubsection{Deep neural networks for graph representation}
 \fullcite{Cao2016} deep neural networks for graph representation \\
 \fullcite{Raghu2016} expressivity of deep neural networks \\
 The idea of representing semantic objects like words or vertices, which was already explored in the previous
@@ -65,4 +65,4 @@ finite lengths and can therefore fail to capture relevant contextual information
 
 
 
-\subsection{Comparison}
+\subsubsection{Comparison}
