--- a/thesis/thesis.ltx
+++ b/thesis/thesis.ltx
@@ -37,13 +37,13 @@
 \section{Introduction}\label{section:introduction}
 \import{./}{introduction.ltx}
 
-\section{Foundations}\label{section:foundations}
+\section{Background and related work}\label{section:foundations}
 \import{./}{foundations.ltx}
 
-\section{Neural networks}\label{section:neural networks}
+\subsection{Neural networks}\label{section:neural networks}
 \import{./}{neural_networks.ltx}
 
-\section{Ontology learning}\label{section:ontology learning}
+\subsection{Ontology learning}\label{section:ontology learning}
 \import{./}{ontology_learning.ltx}
 
 \section{Analysis of the Wikidata taxonomy}\label{section:taxonomy analysis}
